k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmu-fe-npc
  labels:
    app: rmu-fe-npc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmu-fe-npc
  template:
    metadata:
      labels:
        app: rmu-fe-npc
    spec:
      containers:
      - name: rmu-fe-npc
        image: labcabrera/rmu-fe-npc:latest
        ports:
        - containerPort: 8084
