k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmu-fe-npc-service
spec:
  selector:
    app: rmu-fe-npc
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8084
  type: ClusterIP
